assessementStyles.css
html, body {
min-height: 100%;
min-width: 700px
}
.results {
margin: auto;
max-width: 700px;
display: flex;
justify-content: center;
align-items: center;
height: inherit;
padding: 3px;
flex-direction: column;
}
.narrativeBox{
width: 700px;

}
.resultsPara {
margin-top: 50px;
padding-left: 20px;
padding-right: 20px;
padding-top: 10px;
padding-bottom: 10px;
background-color: whitesmoke;
-webkit-border-radius:5px;
-moz-border-radius: 5px; 
}
.radarBox {
maxrgin:auto;
margin-top: 30px;
width: 700px;
}
input[type="radio"] {
height: 20px;
width: 20px;
}
.patataButton {
margin: auto;
max-width: 400px;
padding: 10px;
border: none;
-webkit-border-radius:5px;
-moz-border-radius: 5px; 
border-radius: 5px; 
background-color: #f98f50; 
font-size: 16px; 
color: #fff;
}
.introBox {
padding: 10px;
color: #fff;
background-color: #6E6B6B;  
-webkit-border-radius:5px;
-moz-border-radius: 5px; 
}
body, div, form { 
padding: 0;
margin: 0;
outline: none;
font-family: Poppins, Arial, sans-serif;
font-size: 16px;
color: #666;
line-height: 22px;
}
.areaTitle{

}
h1, h4 {
margin: 15px 0 4px;
}
h1 {
font-weight: 400;
color: #39CCCC;
}
.mainBox {
  margin: auto;
  max-width: 700px;
  padding: 20px;
  background: #fff;
  box-shadow: 0 2px 5px #ccc;
  border-radius: 20px;
  justify-content: center;
  align-items: center;
  height: inherit;
}
form {
  width: 100%;
}
input {
width: calc(100% - 10px);
padding: 5px;
border: 1px solid #ccc;
border-radius: 3px;
vertical-align: middle;
}
input:hover {
border: 1px solid #1c87c9;
}
table {
width: 100%;
border-collapse: collapse;
margin-bottom: 50px;
}
.odd{
  background-color: lightgrey;
}
h4 {
padding: 15px 0 5px;
}
.question-answer label {
display: inline-block;
padding: 0 20px 15px 0;
}
.question-answer input {
width: auto;
}
th {
width: 5%;
padding: 7px 7px;
text-align: center;
vertical-align: center;
font-size: 15px;
line-height: 18px;
font-weight: 600;
border-bottom: 1px solid #1574BC;
color: #1574BC;
}
td {
width: 5%;
padding: 20px 20px;
text-align: center;
vertical-align: center;
line-height: 18px;
font-weight: 400;
}
.first-col {
width: 26%;
font-size: 14px;
text-align: left;
border-right: 1px solid #1574BC;
}
.btn-block {
text-align: center;
}
.skipButton {
text-align: center;
margin-left: 10px;
}
button {
min-width: 150px;
max-width: 300px;
padding: 10px;
border: none;
-webkit-border-radius: 5px; 
-moz-border-radius: 5px; 
border-radius: 5px; 
background-color: #39CCCC; 
font-size: 16px;
color: #fff;
cursor: pointer;
transition: background-color 0.2s ease-in-out;
}
button:hover {
background-color: #096A2E;
transition: background-color 0.2s ease-in-out;
}
.resultsButton {
  margin: 10px;
}
.resultsButtonSection {
  display: flex; 
  align-items: center;
  justify-content: center;
}
@media (min-width: 568px) {
th, td {
word-break: keep-all;
}
}
.sectionHead {
  display: flex; 
  align-items: center;
  justify-content: space-between;
}
.sectionContent {
transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out, padding 0.5s ease-in-out;
max-height: 2000px;
overflow: hidden;
}

.sectionContent.hidden {
max-height: 0;
opacity: 0;
overflow: hidden;
}

